style.css
@font-face {
    font-family: 'Fraunces';
    src:url('./assets/fonts/fraunces/Fraunces-VariableFont_SOFT\,WONK\,opsz\,wght.ttf');
  }

@font-face {
    font-family: 'Manrope';
    src: url('./assets/fonts/manrope/Manrope-VariableFont_wght.ttf');
}

.green-line {
    text-decoration-line: underline;
    text-decoration-thickness: 2px;
    text-decoration-color: #44FFA1;
    text-decoration-style: solid;
}

.green-line2 {
    text-decoration-line: underline;
    text-decoration-thickness: 5px;
    text-decoration-color: #44FFA1;
    text-decoration-style: solid;
}

.navbutton {
  font-family: 'Manrope';
  font-weight: 500;
  font-size: medium;
  color: white;
}

.navbutton:hover{
  color: #44FFA1;
}

.workitpurple {
    color: #24053E;
    background-color: #24053E;
}

.heading-large {
    font-family: 'Fraunces';
    font-weight: 600;
    font-size: 80px;
    line-height: 80px;
    color: #24053E;
}

.heading-small {
    font-family: 'Fraunces';
    font-weight: 500;
    font-size: 30px;
    line-height: 64px;
    color: #24053E;
}

.heading-small-space {
    line-height: 44px;
}

.heading-medium {
    font-family: 'Fraunces';
    font-weight: 500;
    font-size: 50px;
    line-height: 40px;
    color: #24053E;
}

p {
    font-family: 'Manrope';
    font-weight: 400;
    font-size: 18px;
    line-height: 32px;
    color: #24053E;
}

.top-pad {
    padding-top: 15px;
}

.bottom-pad {
    padding-bottom: 15px;
}

.btn-primary {
    color: #24053E;
    background-color: #44FFA1;
}

.btn-primary:hover {
    color: #44FFA1;
    background-color: #24053E;
    border: #44FFA1 1px solid;
}


.founder-space {
    padding: 50px;
    margin: auto;
}

.founder-img {
    z-index: -1;
}

.small-bg {
    max-width: 100%;
    width: 50%;
    height: 50%;
}

.numberoutline {
    border:1px solid #24053E;    
    height:70px;
    width:70px;
    border-radius:50%;
    -moz-border-radius:50%;
    -webkit-border-radius:50%;
}

.headerbg {
    background-color: #24053E;
    padding: 10px;
}

.firstbg {
    background-color: #fcf8ff;
}

.secondbg {
    background-color: white;
    padding-top: 50px;
    padding-bottom: 30px;
}

.curvedbottom {
    border-bottom-left-radius: 60%;
    border-bottom-right-radius: 60%;
}

.resizepic {
    width: 50%;
    height: 50%;
}

.iconspace {
    padding-top: 25px;
    padding-left: 10px;
    padding-right: 10px;
}

.phonespace {
    transform: translateY(20px);
    scale: 1.4;
}

.bg-left {
   transform: translateX(-200px);
   scale: 1.6;
}

.bg-right {
    transform: translateX(350px);
    scale: 1.1;
}

